[metadata]
name = notchandemo
version = 0.0.1
author = Johan Stenberg
author_email = johan.stenberg@microsoft.com
description = Demo package for push notifications/long running operatoins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johanste/notchandemo
project_urls =
    Bug Tracker = https://github.com/johanste/notchandemo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    grpcio
[options.packages.find]
where = src